--- a/bear_classifier.ipynb
+++ b/bear_classifier.ipynb
@@ -92,9 +92,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Convert to webapp by installing Voila and connecting it to the Jupyter notebook.\n",
-    "!pip install voila\n",
-    "!jupyter serverextension enable voila --user"
+    "# # Convert to webapp by installing Voila and connecting it to the Jupyter notebook.\n",
+    "# !pip install voila\n",
+    "# !jupyter serverextension enable voila --user"
    ],
    "metadata": {
     "collapsed": false,
