--- a/bear_classifier.ipynb
+++ b/bear_classifier.ipynb
@@ -1,10 +1,35 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "# The Bear Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Upload an image of a bear and this model will tell you what sort of bear it is.\n",
+    "\n",
+    "_Black bears, grizzly bears, and teddy bears are currently recognized._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -90,18 +115,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# # Convert to webapp by installing Voila and connecting it to the Jupyter notebook.\n",
     "# !pip install voila\n",
     "# !jupyter serverextension enable voila --user"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
